@@ -1,3 +1,8 @@
+Thu Jan 14 11:44:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* variable.c (rb_f_global_variables): add $1..$9 only if $~ is
+	  set.  fix the condition removed at r14014.
+
 Wed Jan 13 17:21:45 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* .travis.yml: removed commented-out code.
